--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "filament/widgets": "^3.3",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "tomatophp/filament-alerts": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
